# Pychart-Recru

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  calculator.py  main.py  pyproject.toml
docs/source/: conf.py  index.rst
tests/: test_calculator.py  test_calculator_pytest.py
