[project]
name = "pychart"
version = "0.1.0"
description = ""
authors = [
    {name = "arkadiusz ",email = "a.mosiejczuk.post@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "sphinx (>=8.2.3,<9.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.5"
flake8 = "^7.2.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
